--- a/FSD_Education_site/Ui-kit/css/Header2.css
+++ b/FSD_Education_site/Ui-kit/css/Header2.css
@@ -35,7 +35,7 @@
   margin-left: auto;
 }
 
-.main-menu_items {
+.main-menu_item {
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
@@ -47,7 +47,7 @@
   margin-right: 30px;
 }
 
-.main-menu_items:first-child {
+.main-menu_item:first-child {
   font-weight: bold;
   color: rgba(31, 32, 65, 0.5);
 }
@@ -61,6 +61,7 @@
   padding: 9px 20px;
   position: relative;
   z-index: -1;
+  margin-right: 20px;
 }
 
 .buttons__login::before {
@@ -87,20 +88,33 @@
   padding: 9px 20px;
 }
 
-/*button
- *
- * background: #ffffff
- * border: 1px solid #D9D9D9
- * box-sizing: border-box
- * box-shadow: 0px 0px 2px rgba(0,0,0, 0.0015)
- * border-radius: 10px
- * color:#595959
- * font-size: 16px
- * line-height: 24px
- * padding: 9px 20px */
 .button_sign_in {
   background: #1890FF;
   border: 2px solid #D9D9D9;
   color: #fff;
   margin-right: 10px;
+}
+
+.container-username {
+  display: flex;
+  align-items: center;
+}
+
+.username {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: rgba(31, 32, 65, 0.5);
+  align-items: center;
+}
+
+.container-username::before {
+  content: "";
+  width: 1px;
+  height: 30px;
+  display: inline-block;
+  background: rgba(31, 32, 65, 0.1);
+  margin-right: 20px;
 }
