--- a/FSD_Education_site/Ui-kit/css/Footer1.css
+++ b/FSD_Education_site/Ui-kit/css/Footer1.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
 }
 
-.footer-section, .footer-info__subscribe__inp, .footer-info__subscribe_items, .footer-info__support_items, .footer-info__about-us_items, .footer-info__navigation_items, .footer-info__description_text {
+.footer2-container__text-description, .footer-section, .footer-info__subscribe__inp, .footer-info__subscribe_items, .footer-info__support_items, .footer-info__about-us_items, .footer-info__navigation_items, .footer-info__description_text {
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
@@ -112,4 +112,25 @@ body {
 
 .footer-section__item:not(:last-child) {
   margin-right: 20px;
+  /* footer2********* */
+}
+
+.footer2-container {
+  display: flex;
+  flex-direction: column;
+  padding: 100px 440px 111px 440px;
+  align-items: center;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+}
+
+.footer2-container__logo {
+  margin-bottom: 20px;
+}
+
+.footer2-container__text-description {
+  color: rgba(31, 32, 65, 0.75);
+  line-height: 24px;
+  text-align: center;
+  margin-bottom: 25px;
 }
