--- a/FSD_Education_site/Ui-kit/sass/Footer1.sass
+++ b/FSD_Education_site/Ui-kit/sass/Footer1.sass
@@ -135,3 +135,24 @@ body
 
 .footer-section__item:not(:last-child)
   margin-right: 20px
+
+
+  /* footer2*********
+
+.footer2-container
+  display: flex
+  flex-direction: column
+  padding: 100px 440px 111px 440px
+  align-items: center
+  background: #FFFFFF
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
+
+.footer2-container__logo
+  margin-bottom: 20px
+
+.footer2-container__text-description
+  @extend %main-font-stile
+  color: rgba(31, 32, 65, 0.75)
+  line-height: 24px
+  text-align: center
+  margin-bottom: 25px
